compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/funcitonTypes.kt
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL
class A : (<!UNSUPPORTED!>categoryName<!>: <!SYNTAX!><!>)<!SYNTAX!><!> <!SYNTAX!><!>{<!SYNTAX!><!>

/* GENERATED_FIR_TAGS: classDeclaration, functionalType */
